<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1">

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tell_us"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emails"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext_background"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/et_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="Birth Day"
                    android:background="@android:color/transparent"
                    android:hint="@string/dob_hint"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="9dp"
                    android:contentDescription="@string/calendar_icon"
                    android:minHeight="20dp"
                    android:src="@drawable/calendar" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/re_enter_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp">

                <CheckBox
                    android:id="@+id/checkbox_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agree"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_terms_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_conditions"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#808080"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btn_start_journey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_journey"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/rounded_blue_button"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>